added LICENSE, some experiments with NDK